@@ -1,4 +1,4 @@
-# Automatically generated by php-weathermap v0.96dev
+# Automatically generated by php-weathermap v0.97
 
 FONTDEFINE 10 GillSans.ttf 8
 
@@ -36,12 +36,12 @@ NODE DEFAULT
 # TEMPLATE-only LINKs:
 LINK DEFAULT
 	WIDTH 4
-	SET cacti_use_ifspeed 1
 	BWFONT 10
 	COMMENTFONT 10
 	COMMENTFONTCOLOR 0 0 0
 	BWLABEL bits
 	BANDWIDTH 100M
+	SET cacti_use_ifspeed 1
 
 
 # regular NODEs:
@@ -96,23 +96,22 @@ LINK normal
 	NODES node00342:N node80111:W
 	VIA 706 93
 
-
 LINK test1
 	LINKSTYLE oneway
 	BWSTYLE angled
 	INBWFORMAT {link:this:inpercent:%.2f}%
 	OUTBWFORMAT {link:this:outpercent}% {link:this:bandwidth_out:%k}b
 	NODES node20108 node00342:S
+	BANDWIDTH 200M
 
 LINK test2
 	BWSTYLE angled
-	BANDWIDTH 2M
 	INFOURL {map:cacti_url}graph.php?rra_id=all&local_graph_id={link:this:cacti_graph_id}
 	OVERLIBGRAPH {map:cacti_url}graph_image.php?rra_id=0&graph_nolegend=true&graph_height=100&graph_width=300&local_graph_id={link:this:cacti_graph_id}
 	TARGET {map:cacti_path_rra}/localhost_traffic_in_55.rrd
 	OUTCOMMENT {link:this:cacti_ifDescr} {link:this:max_bandwidth_in:%k}
 	NODES node00364 node00352
-	SET cacti_use_ifspeed 1
+	BANDWIDTH 2M
 
 
 
